--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "w3name": "^1.0.8",
     "web3": "^1.10.0"
   },
   "devDependencies": {
