--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "ipfs-core": "^0.18.1",
+    "multiformats": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web3": "^1.10.0"
