--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.0",
     "web3": "^1.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react-dom": "^19.0.11",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.0",
