--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-jazzicon": "^1.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-typical": "^0.1.3",
     "web3": "^1.10.0"
   },
   "devDependencies": {
