added files redux, fixed video buffer view, modularized file decryption and fixed uploaded file row display

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,11 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
-
+    "downlevelIteration": true,
+    
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
