--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "declaration": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
