modified tsconfig files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
+    "declaration": true,
     "jsx": "react-jsx",
     "downlevelIteration": true,
     
