removed composite and declaration from tsconfig.node.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "isolatedModules": false,
     "declaration": true,
+    "composite": true,
     "jsx": "react-jsx",
     "downlevelIteration": true,
     
