--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "date-fns": "^2.30.0",
     "ipfs-core": "^0.18.1",
     "multiformats": "^12.0.1",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-topbar-progress-indicator": "^4.1.1",
     "react-typical": "^0.1.3",
     "web3": "^1.10.0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.2.6",
     "@types/react-typical": "^0.1.0",
