--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.14.0",
     "react-topbar-progress-indicator": "^4.1.1",
     "react-typical": "^0.1.3",
+    "recharts": "^2.7.2",
     "web3": "^1.10.0"
   },
   "devDependencies": {
