--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multiformats": "^12.0.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
     "react-redux": "^8.1.1",
