--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
