--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
     "vite-plugin-svgr": "^3.2.0"
   },
