--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "connectkit": "^1.5.1",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
     "react": "^18.2.0",
@@ -25,7 +26,9 @@
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
-    "vite-plugin-svgr": "^3.2.0"
+    "viem": "^1.5.4",
+    "vite-plugin-svgr": "^3.2.0",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.0.22",
