--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connectkit": "^1.5.1",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
