--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
