--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
+    "swr": "^2.2.2",
     "viem": "^1.5.4",
     "vite-plugin-svgr": "^3.2.0",
     "wagmi": "^1.3.10",
