--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "add": "^2.0.6",
     "axios": "^1.4.0",
     "connectkit": "^1.5.1",
+    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
     "jszip": "^3.10.1",
