feat: stacked bar component

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "add": "^2.0.6",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "connectkit": "^1.5.1",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-globe.gl": "^2.24.3",
