--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-oauth-popup": "^1.0.5",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "react-sizeme": "^3.0.2",
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
     "swr": "^2.2.2",
