--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.17",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
