--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
     "jszip": "^3.10.1",
+    "lightbox.js-react": "^0.8.2",
+    "lightgallery": "^2.7.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
