--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connectkit": "^1.5.1",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
+    "formik": "^2.4.4",
     "framer-motion": "^10.12.17",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
@@ -46,7 +47,8 @@
     "wagmi": "^1.3.10",
     "web3": "^4.1.1",
     "web3-utils": "^4.0.3",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.0.22",
