--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-radar": "^0.9.1",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
