--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-oauth-popup": "^1.0.5",
+    "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.1",
     "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.13.0",
@@ -80,6 +81,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-radar": "^0.9.1",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
