--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 VITE_API_ENDPOINT=
 VITE_GOOGLE_CLIENT_ID=
+VITE_GOOGLE_CLIENT_SECRET=
 VITE_GITHUB_CLIENT_ID=
+VITE_GITHUB_CLIENT_SECRET=
+VITE_GITHUB_REDIRECT_URL=
+VITE_PASSWORD=
