--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tippyjs/react": "^4.2.6",
     "add": "^2.0.6",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "connectkit": "^1.5.1",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
+    "formik": "^2.4.4",
     "framer-motion": "^10.12.17",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
@@ -35,6 +37,7 @@
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-oauth-popup": "^1.0.5",
+    "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.1",
     "react-resize-detector": "^9.1.0",
     "react-router-dom": "^6.13.0",
@@ -46,7 +49,8 @@
     "wagmi": "^1.3.10",
     "web3": "^4.1.1",
     "web3-utils": "^4.0.3",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "7.0.22",
@@ -78,6 +82,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-radar": "^0.9.1",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
