--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@splinetool/loader": "^0.9.395",
     "@tippyjs/react": "^4.2.6",
     "add": "^2.0.6",
     "axios": "^1.4.0",
@@ -44,6 +45,7 @@
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
     "swr": "^2.2.2",
+    "three": "^0.154.0",
     "viem": "^1.5.4",
     "vite-plugin-svgr": "^3.2.0",
     "wagmi": "^1.3.10",
@@ -67,6 +69,7 @@
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-toggle": "^4.0.3",
+    "@types/three": "^0.156.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
@@ -80,6 +83,7 @@
     "sass": "^1.63.4",
     "storybook": "7.0.22",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-rtl": "^0.9.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-radar": "^0.9.1",
