--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
+    "redux-persist": "^6.0.0",
     "swr": "^2.2.2",
     "three": "^0.154.0",
     "viem": "^1.5.4",
@@ -69,6 +70,7 @@
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-toggle": "^4.0.3",
+    "@types/redux-persist": "^4.3.1",
     "@types/three": "^0.156.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
