--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jszip": "^3.10.1",
     "lightbox.js-react": "^0.8.2",
     "lightgallery": "^2.7.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
