--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-copy-dts": "^0.0.6",
     "vite-plugin-radar": "^0.9.1",
     "vite-tsconfig-paths": "^4.2.0"
   }
