--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@splinetool/loader": "^0.9.395",
+    "@splinetool/loader": "^1.0.50",
     "@tippyjs/react": "^4.2.6",
     "add": "^2.0.6",
     "axios": "^1.4.0",
@@ -23,7 +23,7 @@
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
     "formik": "^2.4.4",
-    "framer-motion": "^10.12.17",
+    "framer-motion": "^11.0.3",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
     "jszip": "^3.10.1",
@@ -40,7 +40,7 @@
     "react-oauth-popup": "^1.0.5",
     "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.1",
-    "react-resize-detector": "^9.1.0",
+    "react-resize-detector": "^10.0.1",
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "react-toggle": "^4.1.3",
@@ -80,11 +80,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.35",
     "prop-types": "15.8.1",
     "sass": "^1.63.4",
     "storybook": "7.5.2",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-3d": "^1.0.4",
     "tailwindcss-rtl": "^0.9.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
