feat: upload files in chunks for files larger than 1GB, brought in from the 'feat/public-stast' branch

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
 	"rules": {
 		"react-refresh/only-export-components": "warn",
 		"@typescript-eslint/no-explicit-any": "off",
-		"react-hooks/exhaustive-deps": "off"
+		"react-hooks/exhaustive-deps": "off",
+		"no-constant-condition": "off"
 	}
 }
