--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "dayjs": "^1.11.9",
     "formik": "^2.4.4",
     "framer-motion": "^11.0.3",
+    "hash-wasm": "^4.11.0",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
     "jszip": "^3.10.1",
     "lightbox.js-react": "^0.8.9",
     "moment": "^2.29.4",
+    "multiformats": "^13.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
