--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ VITE_GITHUB_CLIENT_ID=
 VITE_GITHUB_CLIENT_SECRET=
 VITE_GITHUB_REDIRECT_URL=
 VITE_PASSWORD=
+#IPFS:
+VITE_ROUTER=browser-router  #hash-router
