--- a/package.json
+++ b/package.json
@@ -13,33 +13,32 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@helia/unixfs": "^3.0.0",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@splinetool/loader": "^1.0.50",
     "@tippyjs/react": "^4.2.6",
-    "add": "^2.0.6",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "connectkit": "^1.5.1",
-    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.9",
     "formik": "^2.4.4",
     "framer-motion": "^11.0.3",
     "hash-wasm": "^4.11.0",
-    "highcharts": "^11.1.0",
+    "helia": "^4.2.1",
     "highcharts-react-official": "^3.2.1",
     "jszip": "^3.10.1",
+    "libp2p": "^1.5.1",
     "moment": "^2.29.4",
     "multiformats": "^13.1.0",
+    "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-globe.gl": "^2.24.3",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
-    "react-lazy-load-image-component": "^1.6.0",
     "react-oauth-popup": "^1.0.5",
     "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.1",
@@ -84,7 +83,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.35",
-    "prop-types": "15.8.1",
     "sass": "^1.63.4",
     "storybook": "7.5.2",
     "tailwindcss": "^3.3.2",
